--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 }}">
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/cyclopathia.github.io/assets/css/main.css' | relative_url }}">
 </head>
 <body>
     {% include header.html %}
@@ -14,6 +14,6 @@
     
     {% include footer.html %}
     
-    <script src="{{ '/assets/js/slider.js' | relative_url }}"></script>
+    <script src="{{ '/cyclopathia.github.io/assets/js/slider.js' | relative_url }}"></script>
 </body>
 </html>
